temp fix for responsiveness bug on small screens with header

--- a/BoredGaming/app/static/app/content/site.css
+++ b/BoredGaming/app/static/app/content/site.css
@@ -8,7 +8,7 @@ body {
     min-height: 75vh;
 }
 
-.jumbotron > h1,
+.jumbotron > h3,
 .card > h3,
 .footer-title,
 .navbar-brand {
